<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="#0A424D"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:clickable="true"
        android:contentDescription="@string/icon"
        android:id="@+id/icon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon"/>

    <TextView
        android:id="@+id/question_text"
        android:layout_width="320dp"
        android:layout_height="330dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/background_light"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="4dp"
        android:text="@string/question_text_view"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/true_button"
            android:text="@string/true_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="258dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:src="@drawable/button_left" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:src="@drawable/button_right" />
    </LinearLayout>

</LinearLayout>